AUGREL/src/objects/Collateral_Auction__c.object
<CustomObject>
    <fields>
        <fullName>CO_Auction_Location__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Auction location initials</description>
        <label>Auction Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Auction_Sale_Date__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Date car sold at auction
Actual Sale Date</description>
        <label>Auction Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Impound_Fee__c</fullName>
        <description>SRC: ITS 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Impound Fee</description>
        <label>Impound Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Inspection_Completion_Date__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Inspection Completion Date</description>
        <label>Inspection Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Sale_Price__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Amount the car is sold for at Auction
Gross Sale Price</description>
        <label>Auction Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Scheduled_Sale_Date__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Scheduled Sales Date</description>
        <label>Scheduled Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Veh_Auction_Arrival_Date__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Date Vehicle arrives at auction location</description>
        <label>Vehicle Auction Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_Vehicle_Mileage__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Retail - Vehicle Mileage at C/O 
Lease - Vehicle Mileage at Sale</description>
        <label>Vehicle Mileage</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Vehicle_Return_Date__c</fullName>
        <description>SRC: ITS
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Actual date when the vehicle is returned</description>
        <label>Vehicle Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <description>SRC: HOST
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Collateral record</description>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Collateral Auctions</relationshipLabel>
        <relationshipName>Collateral_Auctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FA_Collateral__c</fullName>
        <description>External ID
FANumber~CollateralNumber
ETL Uses this field
RMS Replacement</description>
        <externalId>true</externalId>
        <label>FA_Collateral</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <description>SRC: HOST
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Financial Account</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Collateral Auctions</relationshipLabel>
        <relationshipName>Collateral_Auctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Collateral Auction</label>
    <nameField>
        <label>Collateral Auction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Auctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>